Fixed logic, now game works greatgit status

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     <button
       class="rps-button"
       id="rock"
-      onclick="playGame('rock', computerChoice)"
+      onclick="playGame('Rock', computerChoice)"
     >
       rock
     </button>
     <button
       class="rps-button"
       id="paper"
-      onclick="playGame('paper', computerChoice)"
+      onclick="playGame('Paper', computerChoice)"
     >
       paper
     </button>
     <button
       class="rps-button"
       id="scissors"
-      onclick="playGame('scissors', computerChoice)"
+      onclick="playGame('Scissors', computerChoice)"
     >
       scissors
     </button>
