Added a back button to the page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     >
       scissors
     </button>
+    <div>
+      <span><a href="../index.html">Back to Homepage</a></span>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
